# ontoenv

./: pyproject.toml
ontoenv/: __init__.py
src/ontoenv/: __init__.py
