[project]
name = "ontoenv"
version = "0.3.4"
description = "Manages owl:imports statements for multi-file development"
authors = [
    {name = "Gabe Fierro", email = "gtfierro@mines.edu"} ]
dependencies = [
    "rdflib",
    "click",
    "networkx",
    "requests",
    "matplotlib",
    ]

[tool.rye]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye.scripts]
ontoenv = "python -m ontoenv.cli"
